# GPIR-GPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  meno.txt  test_batch.py  test_single.py
build_bac/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: 3H_GCT.h  cuckoo.h  mod.h  multipir.h  occ.h  okvs.h  opgpu.cuh  parallel.h  pir.h  poly.h  rbmatrices.h  spiral.h  values.h
src/: client.cpp  poly.cpp  spiral.cpp  util.cpp
src/Batch-PIR/: main.cpp
src/Multi-PIR/: multipir.cpp  pir.cpp  test.cpp
src/OCC/: occ.cpp  rbmatrices.cpp  test.cpp
src/OCD/: 3H_GCT.cpp  okvs.cpp  test.cpp
src/PBC/: cuckoo.cpp  mod.cpp  test.cpp
src/Parallel/: opgpu.cu  parallel.cpp  test.cpp
src/benchmark/: test.cpp
